--- a/auth_app/templates/auth_app/minha_conta/conta.html
+++ b/auth_app/templates/auth_app/minha_conta/conta.html
@@ -6,7 +6,8 @@
 Configurações de perfil
 {% endblock titulo %}
 
-{% block conteudo_principal %} 
+{% block conteudo_principal %}
+
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
@@ -17,20 +18,28 @@ Configurações de perfil
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right"></h4>
                 </div>
+                <form action="" method="post">
+                    {% csrf_token %}
                 <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels">Nome</label><input type="text" class="form-control" placeholder="first name" value=""></div>
-                    <div class="col-md-6"><label class="labels">Sobrenome</label><input type="text" class="form-control" value="" placeholder="surname"></div>
+                    <div class="col-md-6">
+                        <label class="labels">Nome</label>
+                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome" value="{{ user.userperfil.nome }}">
+                    </div>
+                    <div class="col-md-6">
+                        <label class="labels">Sobrenome</label>
+                        <input type="text" class="form-control" id="sobrenome" name="Sobrenome" placeholder="Digite seu sobre nome" value="{{ user.userperfil.telefone }}">
+                    </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Telefone</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                    <div class="col-md-12"><label class="labels">Address Line 1</label><input type="text" class="form-control" placeholder="enter address line 1" value=""></div>
-                    
+                    <div class="col-md-12">
+                        <label class="labels">Telefone</label>
+                        <input type="text" class="form-control" id="telefone" name="telefone" placeholder="enter phone number" value="">
+                    </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                    <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                <div class="mt-5 text-center" su>
+                    <button class="btn app-btn-primary profile-button" type="submit">Save Profile</button>
                 </div>
-                <div class="mt-5 text-center"><button class="btn app-btn-primary profile-button" type="button">Save Profile</button></div>
+            </form>
             </div>
         </div>
        
