atualização dos dado de usuario

--- a/auth_app/templates/auth_app/minha_conta/conta.html
+++ b/auth_app/templates/auth_app/minha_conta/conta.html
@@ -1,4 +1,3 @@
-
 {% extends 'pages/dashboard.html' %}
 {% load static %}
 
@@ -7,11 +6,15 @@ Configurações de perfil
 {% endblock titulo %}
 
 {% block conteudo_principal %}
-
+{% include "auth_app/messagens/message.html" %}
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">{{user}}</span><span class="text-black-50">{{user.email}}</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-3"><img class="rounded-circle mt-5"
+                    width="150px"
+                    src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span
+                    class="font-weight-bold"></span><span class="text-black-50"></span><span>
+                </span></div>
         </div>
         <div class="col-md-8 border-right">
             <div class="p-3 py-5">
@@ -20,82 +23,38 @@ Configurações de perfil
                 </div>
                 <form action="" method="post">
                     {% csrf_token %}
-                <div class="row mt-2">
-                    <div class="col-md-6">
-                        <label class="labels">Nome</label>
-                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite seu nome" value="{{ user.userperfil.nome }}">
+                    <div class="row mt-2">
+                        <div class="col-md-6">
+                            <label class="labels">Nome</label>
+                            <input type="text" class="form-control" autocomplete="off" id="nome" name="nome" placeholder="Digite seu nome"
+                                value="{{ user.first_name }}">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="labels">Telefone</label>
+                            <input type="text" class="form-control" autocomplete="off" id="id_telefone" name="telefone"
+                                placeholder="enter phone number" value="{{ user.userperfil.telefone }}">
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <label class="labels">Sobrenome</label>
-                        <input type="text" class="form-control" id="sobrenome" name="Sobrenome" placeholder="Digite seu sobre nome" value="{{ user.userperfil.telefone }}">
+                    <div class="row mt-3">
+                        <div class="col-md-12">
+                            <label class="labels">Email</label>
+                            <input type="text" class="form-control" id="sobrenome" name="Sobrenome"
+                                placeholder="Digite seu sobre nome" value="{{user.email}}" disabled>
+                        </div>
                     </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12">
-                        <label class="labels">Telefone</label>
-                        <input type="text" class="form-control" id="telefone" name="telefone" placeholder="enter phone number" value="">
+                    <div class="mt-5 text-center" su>
+                        <button class="btn app-btn-primary profile-button" type="submit">Atualizar meus dados</button>
                     </div>
-                </div>
-                <div class="mt-5 text-center" su>
-                    <button class="btn app-btn-primary profile-button" type="submit">Save Profile</button>
-                </div>
-            </form>
+                </form>
             </div>
         </div>
-       
+
     </div>
 </div>
-<div class="app-card app-card-account shadow-sm d-flex flex-column align-items-start">
-    <div class="app-card-header p-3 border-bottom-0">
-        <div class="row align-items-center gx-3">
-            <div class="col-auto">
-                <div class="app-icon-holder">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shield-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-<path fill-rule="evenodd" d="M5.443 1.991a60.17 60.17 0 0 0-2.725.802.454.454 0 0 0-.315.366C1.87 7.056 3.1 9.9 4.567 11.773c.736.94 1.533 1.636 2.197 2.093.333.228.626.394.857.5.116.053.21.089.282.11A.73.73 0 0 0 8 14.5c.007-.001.038-.005.097-.023.072-.022.166-.058.282-.111.23-.106.525-.272.857-.5a10.197 10.197 0 0 0 2.197-2.093C12.9 9.9 14.13 7.056 13.597 3.159a.454.454 0 0 0-.315-.366c-.626-.2-1.682-.526-2.725-.802C9.491 1.71 8.51 1.5 8 1.5c-.51 0-1.49.21-2.557.491zm-.256-.966C6.23.749 7.337.5 8 .5c.662 0 1.77.249 2.813.525a61.09 61.09 0 0 1 2.772.815c.528.168.926.623 1.003 1.184.573 4.197-.756 7.307-2.367 9.365a11.191 11.191 0 0 1-2.418 2.3 6.942 6.942 0 0 1-1.007.586c-.27.124-.558.225-.796.225s-.526-.101-.796-.225a6.908 6.908 0 0 1-1.007-.586 11.192 11.192 0 0 1-2.417-2.3C2.167 10.331.839 7.221 1.412 3.024A1.454 1.454 0 0 1 2.415 1.84a61.11 61.11 0 0 1 2.772-.815z"></path>
-<path fill-rule="evenodd" d="M10.854 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"></path>
-</svg>
-                </div><!--//icon-holder-->
-                
-            </div><!--//col-->
-            <div class="col-auto">
-                <h4 class="app-card-title">Segurança</h4>
-            </div><!--//col-->
-        </div><!--//row-->
-    </div><!--//app-card-header-->
-    <div class="app-card-body px-4 w-100">
-        
-        <div class="item border-bottom py-3">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-auto">
-                    <div class="item-label"><strong>Password</strong></div>
-                    <div class="item-data">••••••••</div>
-                </div><!--//col-->
-                <div class="col text-end">
-                    <a class="btn-sm app-btn-secondary" href="#">Change</a>
-                </div><!--//col-->
-            </div><!--//row-->
-        </div><!--//item-->
-        <div class="item border-bottom py-3">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-auto">
-                    <div class="item-label"><strong>Two-Factor Authentication</strong></div>
-                    <div class="item-data">You haven't set up two-factor authentication. </div>
-                </div><!--//col-->
-                <div class="col text-end">
-                    <a class="btn-sm app-btn-secondary" href="#">Set up</a>
-                </div><!--//col-->
-            </div><!--//row-->
-        </div><!--//item-->
-    </div><!--//app-card-body-->
-    
-    <div class="app-card-footer p-4 mt-auto">
-       <a class="btn app-btn-secondary" href="#">Gerenciar segurança</a>
-    </div><!--//app-card-footer-->
-   
+
 </div>
 </div>
 </div>
 
 
 {% endblock %}
-
